@@ -36,10 +36,8 @@ $txt['tea_corptag_options'] = 'Corp Tag';
 $txt['tea_fullcheck'] = 'Run Full Member Check Now';
 $txt['tea_standings_updated'] = 'Standings Last Updated';
 $txt['tea_standings_contains'] = 'Standings List Contains';
-$txt['tea_standings_bluec'] = 'Blue Corps';
-$txt['tea_standings_bluea'] = 'Blue Alliances';
-$txt['tea_standings_redc'] = 'Red Corps';
-$txt['tea_standings_reda'] = 'Red Alliances';
+$txt['tea_standings_blue'] = 'Blue Contacts';
+$txt['tea_standings_red'] = 'Red Contacts';
 $txt['tea_corpl_updated'] = 'Alliance Corp List Last Updated';
 $txt['tea_corpl_contains'] = 'Alliance Corp List Contains';
 $txt['tea_group_settings'] = 'Group Setting for Users with no API';
